fixing CardView on HomeScreen and Universities Fragment

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -24,21 +24,21 @@
         android:id="@+id/imageView9"
         android:layout_width="512dp"
         android:layout_height="656dp"
+        android:contentDescription="@string/background_image_2"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="@+id/fundoSignUp"
         app:layout_constraintEnd_toEndOf="@+id/fundoSignUp"
         app:layout_constraintHorizontal_bias="0.526"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/fundoSignUp"
-        app:layout_constraintVertical_bias="0.387"
-        app:srcCompat="@drawable/fundologoloagind"
-        android:contentDescription="@string/background_image_2" />
+        app:layout_constraintVertical_bias="0.632"
+        app:srcCompat="@drawable/fundologoloagind" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="389dp"
         android:layout_height="83dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="56dp"
         android:gravity="center"
         android:text="@string/textSignUpPage"
         android:textColor="#FFFFFF"
@@ -184,7 +184,7 @@
         android:id="@+id/buttonCadastrar"
         android:layout_width="294dp"
         android:layout_height="68dp"
-        android:layout_marginBottom="64dp"
+        android:layout_marginBottom="16dp"
         android:backgroundTint="#ffb500"
         android:text="@string/signUp"
         android:textAlignment="center"
