--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,8 +8,9 @@
 
     <GridView
         android:id="@+id/restaurantGridView"
-        android:layout_width="344dp"
-        android:layout_height="652dp"
+        android:layout_width="393dp"
+        android:layout_height="648dp"
+        android:numColumns="2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
