--- a/app/src/main/res/layout/fragment_university_single.xml
+++ b/app/src/main/res/layout/fragment_university_single.xml
@@ -10,6 +10,7 @@
         android:id="@+id/cardViewUniversity"
         android:layout_width="390dp"
         android:layout_height="117dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
