--- a/app/src/main/res/layout/fragment_item_single.xml
+++ b/app/src/main/res/layout/fragment_item_single.xml
@@ -27,18 +27,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="110dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:text="@string/name_item"
             android:textSize="20sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/textDescriptionItem"
-            android:layout_width="252dp"
-            android:layout_height="65dp"
+            android:layout_width="251dp"
+            android:layout_height="75dp"
             android:layout_marginStart="110dp"
-            android:layout_marginTop="50dp"
-            android:text="@string/descriptionitem" />
+            android:layout_marginTop="40dp"
+            android:justificationMode="inter_word"
+            android:text="@string/descriptionitem"
+            android:textSize="12sp" />
 
         <TextView
             android:id="@+id/textPriceItem"
@@ -54,7 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="320dp"
             android:layout_marginTop="120dp"
-            android:text="0,00" />
+            android:text="@string/_0" />
 
         <ImageView
             android:id="@+id/imageItem"
@@ -63,7 +65,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="20dp"
             android:contentDescription="@string/imageitem"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerInside" />
     </androidx.cardview.widget.CardView>
 
 </FrameLayout>
