--- a/app/src/main/res/layout/activity_restaurant_screen.xml
+++ b/app/src/main/res/layout/activity_restaurant_screen.xml
@@ -51,42 +51,21 @@
 
     <ImageView
         android:id="@+id/imageRestaurantBanner"
-        android:layout_width="393dp"
+        android:layout_width="fill_parent"
         android:layout_height="140dp"
+        android:contentDescription="@string/bannerrestaurant"
         android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        android:contentDescription="@string/bannerrestaurant" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
-    <HorizontalScrollView
-        android:layout_width="390dp"
-        android:layout_height="540dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageRestaurantBanner"
-        app:layout_constraintVertical_bias="0.088">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <ListView
-                android:id="@+id/itemList"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.75"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.583" />
-        </LinearLayout>
-    </HorizontalScrollView>
+    <ListView
+        android:id="@+id/itemList"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/imageRestaurantBanner"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
