--- a/app/src/main/res/layout/fragment_item_single.xml
+++ b/app/src/main/res/layout/fragment_item_single.xml
@@ -2,13 +2,13 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.ItemFragment">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardViewItem"
-        android:layout_width="370dp"
+        android:layout_width="match_parent"
         android:layout_height="149dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
@@ -24,7 +24,7 @@
 
         <TextView
             android:id="@+id/textNameItem"
-            android:layout_width="wrap_content"
+            android:layout_width="251dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="110dp"
             android:layout_marginTop="5dp"
@@ -34,8 +34,8 @@
 
         <TextView
             android:id="@+id/textDescriptionItem"
-            android:layout_width="251dp"
-            android:layout_height="75dp"
+            android:layout_width="253dp"
+            android:layout_height="74dp"
             android:layout_marginStart="110dp"
             android:layout_marginTop="40dp"
             android:justificationMode="inter_word"
