--- a/app/src/main/res/layout/fragment_university_single.xml
+++ b/app/src/main/res/layout/fragment_university_single.xml
@@ -8,7 +8,7 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardViewUniversity"
-        android:layout_width="390dp"
+        android:layout_width="match_parent"
         android:layout_height="117dp"
         android:layout_marginTop="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
