--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -6,9 +6,110 @@
     tools:context=".fragments.OrderFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.cardview.widget.CardView
+        android:id="@+id/carViewOrderHistory"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="230dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:clickable="true"
+        android:foreground="?attr/selectableItemBackground">
+
+        <TextView
+            android:id="@+id/textNameItem"
+            android:layout_width="251dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="110dp"
+            android:layout_marginTop="5dp"
+            android:text="@string/name_item"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/textDescriptionItem"
+            android:layout_width="253dp"
+            android:layout_height="74dp"
+            android:layout_marginStart="110dp"
+            android:layout_marginTop="40dp"
+            android:justificationMode="inter_word"
+            android:text="@string/descriptionitem"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/text_restaurant_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="130dp"
+            android:text="@string/restaurant_name" />
+
+        <TextView
+            android:id="@+id/restaurant_name_order"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="165dp"
+            android:layout_marginTop="130dp" />
+
+        <TextView
+            android:id="@+id/text_data"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="165dp"
+            android:text="@string/data_item"/>
+
+        <TextView
+            android:id="@+id/data_item"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="125dp"
+            android:layout_marginTop="165dp"
+            />
+
+        <TextView
+            android:id="@+id/textQuantityItem"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="200dp"
+            android:text="@string/quantidade" />
+
+        <TextView
+            android:id="@+id/quantityItem"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="100dp"
+            android:layout_marginTop="200dp"
+            android:text="@string/_0" />
+
+        <TextView
+            android:id="@+id/textPriceItem"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="220dp"
+            android:layout_marginTop="200dp"
+            android:text="@string/valor_total_r" />
+
+        <TextView
+            android:id="@+id/priceTotal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="315dp"
+            android:layout_marginTop="200dp"
+            android:text="@string/_0" />
+
+        <ImageView
+            android:id="@+id/imageItem"
+            android:layout_width="89dp"
+            android:layout_height="91dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="20dp"
+            android:contentDescription="@string/imageitem"
+            android:scaleType="centerInside" />
+
+
+    </androidx.cardview.widget.CardView>
 
 </FrameLayout>
