--- a/app/src/main/res/layout/fragment_university_single.xml
+++ b/app/src/main/res/layout/fragment_university_single.xml
@@ -11,6 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="117dp"
         android:layout_marginTop="20dp"
+        android:clickable="true"
+        android:foreground="?attr/selectableItemBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
