--- a/app/src/main/res/layout/activity_scheduling.xml
+++ b/app/src/main/res/layout/activity_scheduling.xml
@@ -86,7 +86,7 @@
         app:layout_constraintTop_toBottomOf="@+id/calendarView" />
 
     <TimePicker
-        android:id="@+id/datePicker1"
+        android:id="@+id/dateHours"
         android:layout_width="297dp"
         android:layout_height="189dp"
         android:layout_marginTop="4dp"
@@ -110,7 +110,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/datePicker1"
+        app:layout_constraintTop_toBottomOf="@+id/dateHours"
         app:layout_constraintVertical_bias="0.0" />
 
 
