--- a/app/src/main/res/layout/activity_payment_screen.xml
+++ b/app/src/main/res/layout/activity_payment_screen.xml
@@ -85,7 +85,7 @@
         android:layout_width="235dp"
         android:layout_height="25dp"
         android:layout_marginBottom="12dp"
-        android:text="@string/forma_pagamento"
+        android:text="@string/form_payment"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/button_GoToScheduling"
         app:layout_constraintEnd_toEndOf="parent"
