--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="56dp"
         android:layout_marginTop="24dp"
-        android:text="@string/valor_total_compra"
+        android:text="@string/text_total_purchase_amount"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/orderItemList" />
@@ -43,7 +43,7 @@
         android:layout_width="294dp"
         android:layout_height="60dp"
         android:backgroundTint="#ffb500"
-        android:text="@string/agendamento"
+        android:text="@string/text_scheduling"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="20sp"
