--- a/app/src/main/res/layout/fragment_item_single.xml
+++ b/app/src/main/res/layout/fragment_item_single.xml
@@ -50,7 +50,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="260dp"
             android:layout_marginTop="120dp"
-            android:text="@string/valor_item" />
+            android:text="@string/value_item" />
 
         <TextView
             android:id="@+id/priceItem"
