--- a/app/src/main/res/layout/fragment_order_item.xml
+++ b/app/src/main/res/layout/fragment_order_item.xml
@@ -50,7 +50,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="120dp"
-            android:text="@string/quantidade" />
+            android:text="@string/quantity_text" />
 
         <TextView
             android:id="@+id/quantityItem"
@@ -66,7 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="220dp"
             android:layout_marginTop="120dp"
-            android:text="@string/valor_total_r" />
+            android:text="@string/value_total" />
 
         <TextView
             android:id="@+id/priceItem"
